# KSPWLO

./: .gitignore  README.md  output.csv  prova.geojson  start.sh
backend/: CMakeLists.txt  engine.cpp  engine.hpp  main.cpp  message.cpp  message.hpp  network.cpp  network.hpp  utils.cpp  utils.hpp
frontend/: G.graphml  HGICarlo.py  cittastudi_res.csv  cittastudi_res2.csv  client.py  client.py.orig  clientCarlo.py  comp.csv  data.py  dataAnalysis.py  default_map.html  destinazioni.txt  downloadMap.py  edges.txt  env_variables.txt  fileReader.py  gr.graphml  graph.graphml  graph.xml  graph_utils.py  hierarchicalGraphImpl.py  hierarchicalGraphImpl.py.orig  mappa.html  milano_res.csv  modify_graphml.py  network_utils.py  processed_data.csv  requirements.txt  route_map.html  start.sh  test.py  time.csv  utils.py  visualizer.py
frontend/carlo/: HGICarlo.py  clientCarlo.py  fileReader.py
frontend/files/: G.graphml  default_map.html
frontend/graphs/: graph_test.py
frontend/pyQt5/: client.py  default_map.html  integrazione.py  mappa.html
frontend/timer_estimation/: fill_data.py  timer.py
pyQt5/: integrazione.py  primaFinestra.py
